template basic skeleton

--- a/home.html
+++ b/home.html
@@ -5,16 +5,31 @@
         <link href="theme.css" rel="stylesheet" type="text/css" media="all">
     </head>
     <body>
+        <!-- whole site container-->
         <div class="container-fluid" id="main">
-            <!-- <div id="spacer"></div> -->
+            <!-- navigation bar -->
             <div class="row backdrop" id="nav_bar">
-                <div class="col-md-2">Stores</div>
-                <div class="col-md-2">Shop</div>
-                <div class="col-md-4">Game Store</div>
-                <div class="col-md-2">Cart</div>
-                <div class="col-md-2">Account</div>
+                <div class="col-md-2 menu_link">Stores</div>
+                <div class="col-md-2 menu_link">Shop</div>
+                <div class="col-md-4">
+                    <p id="back_t" class="title">Game Store</p>
+                    <p id="front_t" class="title">Game Store</p>
+                </div>
+                <div class="col-md-2 menu_link">Cart</div>
+                <div class="col-md-2 menu_link">Account</div>
+            </div>
+
+            <!-- center text box -->
+            <div class="row backdrop" id="display">
+            
+            </div>
+
+            <!-- search box -->
+            <div class="row backdrop" id="search">
+
             </div>
         </div>
+
 
   
     </body>
