added search bar

--- a/home.html
+++ b/home.html
@@ -24,9 +24,19 @@
             
             </div>
 
+            <!-- text on top of search box -->
+            <div class="row" id="searchText">
+                <p id="search_t">Find your next adventure</p>
+            </div>
+
             <!-- search box -->
             <div class="row backdrop" id="search">
-
+                <div class="col-md-4">
+                    <img id="glass" src="images/search_icon.png" alt="search icon">
+                </div>
+                <div class="col-md-8">
+                    <input id="search_field" type="text" placeholder="Search for a game here...">
+                </div>
             </div>
         </div>
 
