added individual store page

--- a/ind_store.html
+++ b/ind_store.html
@@ -21,9 +21,10 @@
 
             <!-- center text box -->
             <div class="row backdrop" id="display">
-                <p><b>Our Stores:</b></p>
-                <li>Store 1</li>
-                <li>...</li>
+                <p><b>STORE LOCATION GOES HERE</b></p>
+                <li><b>Address:</b> ...</li>
+                <li><b>State:</b> ...</li>
+                <li><b>Zip:</b> ...</li>
             </div>
 
             <!-- text on top of search box -->
